5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1644_1054.log
== TEST (2019-04-09 16:53:09) 
-- CODE:
reta = 2x+y=3
x = input()
y = input()
if (x,y == reta = 3):
 mensagem = "ponto pertence a reta"
else:
 mensagem = "ponto nao pertence a reta"
-- ERROR:
File "XXXX", line 1
    reta = 2x+y=3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:53:45) 
-- CODE:
reta = 2x+y=3
x = input()
y = input()
if (reta = 3):
 mensagem = "ponto pertence a reta"
else:
 mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.141084
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 1
    reta = 2x+y=3
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:03) 
-- CODE:
reta = 2x+y=3
x = input()
y = input()
if (reta = 3):
 mensagem = "ponto pertence a reta"
else:
 mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 1
    reta = 2x+y=3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:28) 
-- CODE:
reta = (2x+y=3)
x = input()
y = input()
if (reta = 3):
 mensagem = "ponto pertence a reta"
else:
 mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 1
    reta = (2x+y=3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:57:41) 
-- CODE:

x = float(input())
y = float(input())
reta = (2x+y=3)
if (reta == 3):
	mensagem = "ponto pertence a reta"
else:
 
print(mensagem)
-- EXECUTION TIME:
0.187843
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    reta = (2x+y=3)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:57:52) 
-- CODE:

x = float(input())
y = float(input())
reta = (2x+y)
if (reta == 3):
	mensagem = "ponto pertence a reta"
else:
 
print(mensagem)
-- EXECUTION TIME:
0.207293
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    reta = (2x+y)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:58:00) 
-- CODE:

x = float(input())
y = float(input())
reta = (2*x+y)
if (reta == 3):
	mensagem = "ponto pertence a reta"
else:
 
print(mensagem)
-- EXECUTION TIME:
0.184985
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 9
    print(mensagem)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:58:23) 
-- CODE:

x = float(input())
y = float(input())
reta = (2*x+y)
if (reta == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.145986
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
